--- a/_sass/colors/syntax-light.scss
+++ b/_sass/colors/syntax-light.scss
@@ -10,7 +10,7 @@
   --highlight-lineno-color: #9e9e9e;
   --inline-code-bg: rgba(25, 25, 28, 0.05);
   --code-color: #3a3a3a;
-  --code-header-text-color: #a3a3a3;
+  --code-header-text-color: #c25e00;
   --code-header-muted-color: #e5e5e5;
   --code-header-icon-color: #c9c8c8;
   --clipboard-checked-color: #43c743;
