--- a/_sass/colors/syntax-dark.scss
+++ b/_sass/colors/syntax-dark.scss
@@ -8,12 +8,12 @@
   --highlighter-rouge-color: #c9def1;
   --highlight-lineno-color: #808080;
   --inline-code-bg: rgba(255, 255, 255, 0.05);
-  --code-color: #b0b0b0;
-  --code-header-text-color: #6a6a6a;
+  --code-color: #c25e00;
+  --code-header-text-color: #c25e00;
   --code-header-muted-color: #353535;
   --code-header-icon-color: #565656;
   --clipboard-checked-color: #2bcc2b;
-  --filepath-text-color: #cacaca;
+  --filepath-text-color: #c25e00;
 
   .highlight .gp {
     color: #87939d;
@@ -31,7 +31,7 @@
 
   .highlight,
   .highlight .w {
-    color: #d0d0d0;
+    color: #c25e00;
     background-color: #151515;
   }
 
@@ -60,12 +60,12 @@
 
   .highlight .o,
   .highlight .ow {
-    color: #d0d0d0;
+    color: #c25e00;
   }
 
   .highlight .p,
   .highlight .pi {
-    color: #d0d0d0;
+    color: #c25e00;
   }
 
   .highlight .gi {
