changes made to home page and about page

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {%extends "layout.html"%}
 
 {%block content%}
-
+<!--Part for tagline + cornell box render-->
+<!--x
 <div class="flex justify-center items-center" style="padding-top: 5%;">
     <div class="bg-contain text-white text-sm items-center" style="background-image: url(../static/cornell_box_32k_spp_denoised_linear.png); padding-left: 3%; width: 100%; height: 100%;">
         <img src="../static/cornell_box_32k_spp_denoised_linear.png" class="w-full h-full object-cover rounded-lg" alt="cornell box render">
@@ -11,8 +12,80 @@
         Dedicated to building a Simple Physically Based Rendering Engine.
         </h1>
     </div>
+</div>
+-->
 
+
+<section class="bg-white dark:bg-neutral-900">
+    <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16">
+        <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Dedicated to creating great Renders!</h1>
+        <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-400">Here at Microfacet, we are dedicated to building a powerful Physically-Based Rendering Engine.</p>
+        <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+            <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+                Join Us
+                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
+            </a>
+            <a href="#" class="py-3 px-5 sm:ms-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                About Us
+            </a>  
+        </div>
+    </div>
+</section>
+
+<!--View Sample Renders Carousel-->
+
+<br>
+<br>
+<div class="text-white text-8xl justify-center items-center">
+    <h1 class="text-4xl font-bold text-white text-center font-mono font-semibold subpixel-antialiased p-8 text-white flex justify-center">
+    Check out more sample renders below!
+    </h1>
 </div>
 
+<div class="grid grid-cols-2 md:grid-cols-3 gap-4 p-8">
+    <div>
+        <img class="h-auto max-w-full rounded-lg border-solid border-2 border-white" src="../static/130297529-2ea9c97c-67c4-461a-958c-c2c1f609a432.png" alt="">
+    </div>
+    <div>
+        <img class="h-auto max-w-full rounded-lg border-solid border-2 border-white" src="../static/185766897-ca4d6b63-7849-4ee7-939a-09d8aa10fea7.png" alt="">
+    </div>
+    <div>
+        <img class="h-auto max-w-full rounded-lg border-solid border-2 border-white" src="../static/185766928-d83b70b2-4b6b-494d-9bfb-aa8088c41777.png" alt="">
+    </div>
+    <div>
+        <img class="h-auto max-w-full rounded-lg border-solid border-2 border-white" src="../static/185767023-74eb520e-8bf0-4fb5-abb8-b3b303305580.png" alt="">
+    </div>
+    <div>
+        <img class="h-auto max-w-full rounded-lg border-solid border-2 border-white" src="../static/cornell_box_32k_spp_denoised_linear.png" alt="">
+    </div>
+    <div>
+        <img class="h-auto max-w-full rounded-lg border-solid border-2 border-white" src="../static/sds_path_test_caustics_36864spp.png" alt="">
+    </div>
+</div>
 
+<!--Blog Cards-->
+<br>
+<br>
+<div class="text-white text-8xl justify-center items-center">
+    <h1 class="text-4xl font-bold text-white text-center font-mono font-semibold subpixel-antialiased p-8 text-white flex justify-center">
+    Read out developer blogs!
+    </h1>
+</div>
+
+<section class = "p-8">
+    <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <a href="#">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Blog Title</h5>
+        </a>
+        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptatibus, sint blanditiis illo porro nulla? Itaque provident enim beatae mollitia eum consequuntur deserunt, vel deleniti nulla sed? Ad, adipisci facere!</p>
+        <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Read more
+            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+        </a>
+    </div>
+</section>
 {%endblock%}
